# django-auto-changelog

./: .gitignore  LICENSE  MANIFEST.in  README.md  generate_migrations.py  run_tests.py  setup.cfg
.github/workflows/: ci-django-tests.yml  ci-flake8.yml
auto_changelog/: middleware.py
auto_changelog/migrations/: 0001_initial.py  0002_changelog_auto_change_referen_6f6e62_idx.py
auto_changelog/models/: __init__.py  changelog.py  changelog_example.py
auto_changelog/templates/auto_changelog/: changelog_table.html
auto_changelog/tests/: test_model_changelog.py
