[metadata]
name = auto_changelog
version = 1.0
author = Research Software Group, Advanced Research Computing, University of Birmingham
author_email = bear-rsg@contacts.bham.ac.uk
description = Automatic Changelog for Django Models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bear-rsg/django-auto-changelog
project_urls =
    Bug Tracker = https://github.com/bear-rsg/django-auto-changelog/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.2.0

[options.extras_require]
testing =
    coverage

[flake8]
exclude=.venv,venv,cache,__pycache__,*migrations*
max-line-length=120

[pep8]
exclude=.venv,venv,cache,__pycache__,*migrations*
max-line-length=120
